--- a/styles/layout/navbar.module.css
+++ b/styles/layout/navbar.module.css
@@ -22,15 +22,35 @@
 }
 
 .menu li a {
+    position: relative;
     text-decoration: none;
-    color: var(--color-primary);
+    color: var(--primary-primary);
     font-weight: 700;
     font-size: 20px;
     transition: color 0.3s;
 }
 
+/* 밑줄의 기본 상태(보이지 않음) */
+.menu li a::after {
+    content: "";
+    position: absolute;
+    left: 50%;                     /* 가운데 기준 */
+    bottom: -8px;                  /* 텍스트와 간격 */
+    width: 100%;
+    height: 3px;
+    background-color: var(--primary-blue);
+    transform: translateX(-50%) scaleX(0);   /* 가운데에서 0 → 1로 */
+    transform-origin: center;                 /* 가운데 기준으로 확대 */
+    transition: transform 0.3s ease;
+}
+
 .menu li a:hover {
   color: var(--color-neutral-900);
+}
+
+/* hover 시 밑줄이 가운데에서 양옆으로 퍼짐 */
+.menu li a:hover::after {
+    transform: translateX(-50%) scaleX(1);
 }
 
 .button-box {
@@ -38,16 +58,16 @@
     flex-direction: row;
     justify-content: flex-end;
     gap: 30px;
-    width: 300px;
+    width: 340px;
 
 }
 
 .button {
-    width: 135px;
-    height: 40px;
+    width: 140px;
+    height: 44px;
     background-color: var(--button-fill-blue); /* 배경색 */    
+    border: 2px solid var(--button-fill-blue); /* 배경색 */
     color: var(--color-white);              /* 글자색 */
-    border: 0; /* 테두리 */
     border-radius: 12px;        /* 둥근 모서리 */
     padding: 8px 24px;        /* 여백 */
     font-size: 18px;
@@ -64,7 +84,7 @@
     width: 135px;
     height: 40px;
     background-color: #0000;  /* 배경색 */
-    color: var(--color-primary);              /* 글자색 */
+    color: var(--primary-blue);              /* 글자색 */
     border: 1.5px solid var(--button-stroke-blue); /* 테두리 */
     border-radius: 12px;        /* 둥근 모서리 */
     padding: 8px 24px;        /* 여백 */
@@ -80,7 +100,7 @@
 .icon-mask {
   display:inline-block;
   width:24px; height:24px;
-  background-color: var(--color-primary);
+  background-color: var(--primary-blue);
   -webkit-mask: url('/icons/keyboard_arrow_down.svg') no-repeat center / contain;
           mask: url('/icons/keyboard_arrow_down.svg') no-repeat center / contain;
 }
