--- a/styles/sections/coreconcept.module.css
+++ b/styles/sections/coreconcept.module.css
@@ -1,4 +1,4 @@
-.feature {
+.concept {
     display: flex;
     justify-content: center;
     max-width: 1920px;
@@ -78,19 +78,6 @@
     gap:32px;
 }
 
-.cards .card {
-    max-width: 378px;
-    max-height: 446px;
-    width: 100%;
-    height: 100%;
-    border: 1px solid var(--color-neutral-200);
-    border-radius: 16px;
-    box-shadow: 0 4px 4px rgba(0,0,0,0.25);
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
 
