--- a/styles/sections/hero.module.css
+++ b/styles/sections/hero.module.css
@@ -103,7 +103,7 @@
     width: 244px;
     height: 64px;
     background-color: #0000;  /* 배경색 */
-    color: var(--color-primary);              /* 글자색 */
+    color: var(--primary-blue);              /* 글자색 */
     border: 1.5px solid var(--button-stroke-blue); /* 테두리 */
     border-radius: 16px;        /* 둥근 모서리 */
     padding: 16px 32px;        /* 여백 */
@@ -125,7 +125,6 @@
     border: 1px solid var(--color-neutral-300);
     border-radius: 8px;
     z-index: 2;
-    
 }
 
 .hero2 {
@@ -144,7 +143,7 @@
 }
 
 .hero-banner-container .heading{
-    color: var(--color-primary);
+    color: var(--primary-blue);
     font-weight: 700;
     font-size: 16px;
 }
@@ -156,4 +155,10 @@
     width: 100%;
     gap: 48px;
     /* border: 2px solid blue;   확인용 */
+}
+
+.multilang-text {
+  word-break: break-word;
+  overflow-wrap: anywhere;
+  white-space: normal;
 }
