--- a/styles/ui/conceptcard.module.css
+++ b/styles/ui/conceptcard.module.css
@@ -135,3 +135,33 @@
   overflow-wrap: anywhere;
   white-space: normal;
 }
+
+
+.card .button-box {
+    width: 100%;
+    height: 40px;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+    /* border: 1px solid blue;     확인용 */
+}
+
+.button-box .button {
+    width: 136px;
+    height: 40px;
+    background-color: var(--button-fill-blue); /* 배경색 */    
+    color: var(--color-white);              /* 글자색 */
+    border: 0; /* 테두리 */
+    border-radius: 16px;        /* 둥근 모서리 */
+    padding: 8px 16px;        /* 여백 */
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.button-box .button:hover {
+    opacity: 85%; /* hover 시 색상 */
+}
