프로젝트 섹션 추가

--- a/app/global.css
+++ b/app/global.css
@@ -23,6 +23,7 @@
     --bg-gray-100: #F8F9FB;
     --color-white: #ffffff;
     --color-black: #000000;
+    --color-black-900: #1C1B1F;
 
     --font-famly: Pretendard, sans-serif;
     --font-size-desktop: 16px;
