--- a/styles/sections/flyframework.module.css
+++ b/styles/sections/flyframework.module.css
@@ -61,34 +61,17 @@
     width: 100%;
     aspect-ratio: 1;
 
+    /* border: 1px solid var(--card-stroke-200); */
+    /* border-radius: 16px; */
+}
+
+.media .image{
+    max-width: 620px;
+    width: 100%;
+    aspect-ratio: 1;
+
     border: 1px solid var(--card-stroke-200);
     border-radius: 16px;
-}
-
-.contents .features {
-    max-width: 516px;
-    max-height: 555px;
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 0;
-    
-}
-
-.contents .features .feature {
-    width: 100%;
-    height: 95px;
-
-    border: 1px solid var(--color-neutral-200);
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 
