--- a/styles/ui/projectcard.module.css
+++ b/styles/ui/projectcard.module.css
@@ -95,3 +95,9 @@
     font-size: 18px;
     color: var(--color-neutral-600);
 }
+
+.multilang-text {
+  word-break: break-word;
+  overflow-wrap: anywhere;
+  white-space: normal;
+}
