--- a/styles/ui/techcard.module.css
+++ b/styles/ui/techcard.module.css
@@ -1,4 +1,4 @@
-.tech {
+.card {
     max-width: 270px;
     max-height: 574px;
     width: 100%;
@@ -15,7 +15,7 @@
     box-shadow: 0 4px 4px rgba(0,0,0,0.25); */
 }
 
-.tech .icon-box {
+.card .icon-box {
     max-width: 112px;
     max-height: 112px;
     width: 100%;
@@ -29,6 +29,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    cursor: pointer;
+    transition: box-shadow 0.2s, transform 0.2s;
+
+}
+
+.icon-box:hover {
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    transform: translateY(-2px); /* 살짝 떠오르는 느낌 */
+}
+
+.icon-box:active {
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    transform: translateY(1px); /* 눌린 느낌 */
 }
 
 .icon-box .icon {
@@ -39,7 +53,7 @@
 
 }
 
-.tech .title {
+.card .title {
     max-width: 270px;
     max-height: 29px;
     width: 100%;
@@ -53,7 +67,7 @@
 
 }
 
-.tech .tech-box {
+.card .tech-box {
     max-width: 270px;
     max-height: 397px;
     width: 100%;
@@ -70,7 +84,7 @@
     gap: 32px;
 }
 
-.tech .tech-box {
+.card .tech-box {
     max-width: 270px;
     max-height: 397px;
     width: 100%;
@@ -79,14 +93,20 @@
     border: 1px solid var(--color-neutral-200);
     border-radius: 16px;
     box-shadow: 0 0 10px rgba(0,0,0,0.25);
-    transition: box-shadow 0.3ms, border 0.3ms;
+
+    cursor: pointer;
+    transition: box-shadow 0.2s, transform 0.2s;
 }
 
 .tech-box:hover {
-    box-shadow: 0 0 1px rgba(0,0,0,0.25);
-    border: 2px solid var(--color-neutral-200);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    transform: translateY(-2px); /* 살짝 떠오르는 느낌 */
 }
 
+.tech-box:active {
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    transform: translateY(1px); /* 눌린 느낌 */
+}
 
 .tech-box .tech-image {
     max-width: 82px;
