--- a/styles/ui/conceptcard.module.css
+++ b/styles/ui/conceptcard.module.css
@@ -14,6 +14,20 @@
     justify-content: flex-start;
     align-items: center;
     gap: 56px;
+
+    cursor: pointer;
+
+    transition: box-shadow 0.2s, outline 0.2s, transform 0.2s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    transform: translateY(-2px); /* 살짝 떠오르는 느낌 */
+}
+
+.card:active {
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    transform: translateY(1px); /* 눌린 느낌 */
 }
 
 .card .container {
