--- a/styles/ui/frameworkcard.module.css
+++ b/styles/ui/frameworkcard.module.css
@@ -1,4 +1,4 @@
-.framework {
+.card {
     max-width: 516px;
     max-height: 160px;
     width: 100%;
@@ -8,30 +8,47 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    gap: 20px;
+    gap: 8px;
 
     /* border: 1px solid var(--color-neutral-200);
     border-radius: 16px;
     box-shadow: 0 4px 4px rgba(0,0,0,0.25); */
+
 }
 
-.framework .container {
+.card .container {
     max-width: 516px;
     width: 100%;
     height: 100%;
 
+    border-radius: 4px;
+    
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 16px;
-
+    
     /* border: 1px solid var(--color-neutral-200);
     border-radius: 16px;
     box-shadow: 0 4px 4px rgba(0,0,0,0.25); */
+
+    cursor: pointer;
+
+    transition: box-shadow 0.2s, outline 0.2s, transform 0.2s;
 }
 
-.framework .footer {
+.container:hover {
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    transform: translateY(-2px); /* 살짝 떠오르는 느낌 */
+}
+
+.container:active {
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    transform: translateY(1px); /* 눌린 느낌 */
+}
+
+.card .footer {
     max-width: 516px;
     width: 100%;
     height: 16px;
@@ -61,6 +78,7 @@
     height: 40px;
 
     color: var(--button-fill-blue);
+
 }
 
 .title-box .title {
@@ -73,6 +91,8 @@
     font-weight: 400;
     font-size: 16px;
     color: var(--color-neutral-600);
+
+    margin-bottom: 12px;
 }
 
 .multilang-text {
