--- a/styles/ui/newscard.module.css
+++ b/styles/ui/newscard.module.css
@@ -45,7 +45,7 @@
     gap: 2px;
 }
 
-.title-wrapper .place{
+.title-wrapper .title{
     font-size: 20px;
     font-weight: 400;
     color: var(--color-neutral-900);
