--- a/app/global.css
+++ b/app/global.css
@@ -84,6 +84,18 @@ header {
     z-index:1000;
 }
 
+footer {
+  width: 100%;
+
+  background-color: var(--bg-gray-100);
+  border-top: 1px solid var(--card-stroke-200);
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+
+}
 /* main {
   width: 100%;
 
