--- a/styles/layout/footer.module.css
+++ b/styles/layout/footer.module.css
@@ -1,16 +1,14 @@
 .wrapper {
-    max-width: 95%;
-    max-height: 245px;
-    width: 95vw;
+    max-width: 1200px;
+    width: 100%;
     height: 245px;
-
-    background-color: var(--bg-gray-100);
-    border-top: 1px solid var(--card-stroke-200);
-
+    margin: 0 auto;
+    
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    
 }
 
 .container {
@@ -19,7 +17,7 @@
     width: 100%;
     height: 100%;
 
-    margin: 20px 0 120px;
+    margin: 20px 0 100px;
 
     /* border: 2px solid red;      확인용 */
 
@@ -27,7 +25,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    gap: 64px;
+    gap: 48px;
 }
 
 .container .address {
