--- a/app/global.css
+++ b/app/global.css
@@ -61,9 +61,6 @@ body {
   background-color: var(--color-white);
   color: var(--color-black);
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   min-height: 100vh;
 }
 
@@ -72,7 +69,8 @@ header {
     top: 0;
     width: 100%;
     max-width: 1920px;
-    height: 78px;
+    height: 72px;
+    margin: 0;
     background-image: linear-gradient(
       180deg,
       rgba(255,255,255,0.9) 15.1%,
@@ -80,7 +78,8 @@ header {
     );
     backdrop-filter: blur(6px);
     
-    /* border: 2px solid purple;  확인용 */
+    border-top: 1px solid white;
+    /* border: 0 solid purple;   확인용 */
     z-index:1000;
 }
 
@@ -96,10 +95,10 @@ footer {
   align-items: flex-start;
 
 }
-/* main {
-  width: 100%;
-
-} */
+main {
+  display: flex;
+  flex-direction: column;
+}
 
 h1 {
   font-size: 2em;      /* PC: 32px, 태블릿: 28px, 모바일: 24px */
