--- a/styles/sections/contact.module.css
+++ b/styles/sections/contact.module.css
@@ -8,7 +8,7 @@
     width: 100%;
     /* border: 2px solid red;        확인용 */
     max-width: 1200px;
-    margin: 80px auto;
+    margin: 100px auto 240px;
 
     display: flex;
     flex-direction: column;
