--- a/styles/sections/keyfeature.module.css
+++ b/styles/sections/keyfeature.module.css
@@ -95,18 +95,15 @@
   white-space: normal;
 }
 
-.image{
-    max-width: 580px;
-    max-height: 406px;
-
-    border-radius: 8px;
-
-    position: relative;
-
-    aspect-ratio: 10 / 7; /* 또는 원하는 비율 */
-    width: 100%;
-    overflow: hidden;
+.image {
+  max-width: 568px;
+  /* 필요하면 더 줄이기: 예) max-width: 400px; */
+  width: 100%;
+  border-radius: 8px;
+  /* box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25); */
+  overflow: hidden;
 }
+
 
 
 
