--- a/styles/sections/projectintro.module.css
+++ b/styles/sections/projectintro.module.css
@@ -101,7 +101,7 @@
     max-height: 467px;
 
     border-radius: 8px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 
     position: relative;
 
