--- a/styles/sections/systemarchitecture.module.css
+++ b/styles/sections/systemarchitecture.module.css
@@ -97,7 +97,7 @@
 .container {
     max-width: 1200px;
     width: 100%;
-    max-height: 400px;
+    max-height: 600px;
     height: 100%;
 
     /* border: 1px solid purple;        확인용 */
@@ -109,20 +109,15 @@
     gap: 64px;
 }
 
-.image{
-    max-width: 1200px;
-    max-height: 357px;
 
-    border-radius: 8px;
-
-    position: relative;
-
-    aspect-ratio: 6 / 5; /* 또는 원하는 비율 */
-    width: 100%;
-    overflow: hidden;
+.image {
+  max-width: 1200px;
+  /* 필요하면 더 줄이기: 예) max-width: 400px; */
+  width: 100%;
+  border-radius: 8px;
+  /* box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25); */
+  overflow: hidden;
 }
-
-
 
 
 
