--- a/styles/sections/contact.module.css
+++ b/styles/sections/contact.module.css
@@ -34,7 +34,7 @@
     
     margin: 0;
     color: var(--color-neutral-900);
-    font-size: 64px;
+    font-size: 4rem;
     font-weight: 700;
     text-align: left;
 }
@@ -44,7 +44,7 @@
     
     margin: 0;
     color: var(--color-neutral-600);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 500;
     text-align: left;
 }
@@ -109,7 +109,7 @@
     border-right: 5px solid var(--color-neutral-300);
     padding: 10px 10px 10px 0;
 
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 700;
     color: var(--color-neutral-600);
 }
@@ -120,7 +120,7 @@
     border: 0;
     padding: 10px 0 10px 18px;
 
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 500;
     color: var(--color-neutral-600);
 }
@@ -149,7 +149,7 @@
 }
 
 .input-box .input-label{
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 500;
     color: var(--color-neutral-900);
 }
@@ -164,7 +164,7 @@
 
     padding: 8px;
 
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
     color: var(--color-neutral-600);
 }
