--- a/styles/layout/footer.module.css
+++ b/styles/layout/footer.module.css
@@ -29,7 +29,7 @@
 }
 
 .container .address {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
     color: var(--color-neutral-900);    /* 글자색 */
     line-height: 35px;
