--- a/styles/layout/servicenavbar.module.css
+++ b/styles/layout/servicenavbar.module.css
@@ -29,7 +29,7 @@
     text-decoration: none;
     color: var(--primary-blue);
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.25rem;
     transition: text-shadow 0.3s;
 }
 
