--- a/styles/sections/aboutus.module.css
+++ b/styles/sections/aboutus.module.css
@@ -42,7 +42,7 @@
 
     margin: 0;
     color: var(--color-neutral-900);
-    font-size: 80px;
+    font-size: 5rem;
     font-weight: 700;
     text-align: left;
 }
@@ -80,7 +80,7 @@
 
     color: var(--color-neutral-600);
 
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
     line-height: 48px;
 }
@@ -89,7 +89,7 @@
 
     color: var(--color-neutral-600);
 
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 500;
     line-height: 48px;
 }
@@ -113,7 +113,7 @@
 
     color: var(--color-neutral-900);
 
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     line-height: 48px;
 }
@@ -126,7 +126,7 @@
 
     font-family: "Pacifico";
     
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     line-height: 48px;
 }
