--- a/styles/sections/history.module.css
+++ b/styles/sections/history.module.css
@@ -49,7 +49,7 @@
     
     margin: 0;
     color: var(--color-neutral-900);
-    font-size: 64px;
+    font-size: 4rem;
     font-weight: 700;
     text-align: center;
 }
