--- a/styles/sections/imagerightpattern.module.css
+++ b/styles/sections/imagerightpattern.module.css
@@ -34,7 +34,7 @@
 
     margin: 0;
     color: var(--color-neutral-900);
-    font-size: 64px;
+    font-size: 4rem;
     font-weight: 700;
     text-align: center;
 
@@ -73,7 +73,7 @@
     
     margin: 0;
     color: var(--color-neutral-600);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     text-align: left;
 
