--- a/styles/sections/logo.module.css
+++ b/styles/sections/logo.module.css
@@ -48,7 +48,7 @@
     
     margin: 0;
     color: var(--color-neutral-900);
-    font-size: 64px;
+    font-size: 4rem;
     font-weight: 700;
     text-align: center;
 }
@@ -60,7 +60,7 @@
     /* border: 2px solid blue;   확인용 */ 
 
     color: var(--color-neutral-600);
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
 
     display: flex;
@@ -82,7 +82,7 @@
     position: relative;
 
     color: var(--color-neutral-600);
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
 
     display: flex;
@@ -152,7 +152,7 @@
     /* border: 2px solid blue;   확인용 */ 
 
     color: var(--color-neutral-600);
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
 
     display: flex;
@@ -169,7 +169,7 @@
     /* border: 2px solid blue;   확인용 */ 
 
     color: var(--color-neutral-600);
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
 
     display: flex;
