--- a/styles/sections/overview.module.css
+++ b/styles/sections/overview.module.css
@@ -39,7 +39,7 @@
     width: 100%;
 
     color: var(--color-neutral-900);
-    font-size: 64px;
+    font-size: 4rem;
     font-weight: 700;
     text-align: left;
 }
@@ -49,7 +49,7 @@
     width: 100%;
 
     color: var(--color-neutral-600);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     text-align: left;
 }
@@ -59,7 +59,7 @@
     width: 100%;
 
     color: var(--color-neutral-600);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     text-align: left;
 }
