--- a/styles/sections/projectintro.module.css
+++ b/styles/sections/projectintro.module.css
@@ -34,7 +34,7 @@
 
     margin: 0;
     color: var(--color-neutral-900);
-    font-size: 64px;
+    font-size: 4rem;
     font-weight: 700;
     text-align: center;
 }
@@ -71,7 +71,7 @@
     
     margin: 0;
     color: var(--color-neutral-900);
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 700;
     text-align: left;
 
@@ -83,7 +83,7 @@
     
     margin: 0;
     color: var(--color-neutral-600);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     text-align: left;
 
