--- a/styles/sections/systemarchitecture.module.css
+++ b/styles/sections/systemarchitecture.module.css
@@ -34,7 +34,7 @@
 
     margin: 0;
     color: var(--color-neutral-900);
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 700;
     text-align: center;
 }
@@ -58,7 +58,7 @@
     margin-bottom: 12px;
 
     color: var(--color-neutral-600);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     text-align: left;
 }
@@ -69,7 +69,7 @@
     gap: 8px;
     margin-bottom: 8px;
     color: var(--color-neutral-600);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     text-align: left;
 }
