--- a/styles/ui/frameworkcard.module.css
+++ b/styles/ui/frameworkcard.module.css
@@ -83,13 +83,13 @@
 
 .title-box .title {
     font-weight: 700;
-    font-size: 28px;
+    font-size: 1.75rem;
     color: var(--color-neutral-900);
 }
 
 .container .description {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1rem;
     color: var(--color-neutral-600);
 
     margin-bottom: 12px;
