--- a/styles/ui/introductioncard.module.css
+++ b/styles/ui/introductioncard.module.css
@@ -28,7 +28,7 @@
 
 .card-header .title{
     font-weight: 700;
-    font-size: 32px;
+    font-size: 2rem;
     color: var(--color-neutral-600);
 }
 
@@ -49,7 +49,7 @@
 
 .container .description {
     font-weight: 500;
-    font-size: 24px;
+    font-size: 1.5rem;
     line-height: 36px;
     color: var(--color-neutral-600);
 }
