--- a/styles/ui/leadershipcard.module.css
+++ b/styles/ui/leadershipcard.module.css
@@ -71,19 +71,19 @@
 }
 
 .footer .name {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
     color: var(--color-black);
 }
 
 .footer .title {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     color: var(--color-neutral-600);
 }
 
 .footer .email {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     color: var(--button-fill-blue);
 }
