--- a/styles/ui/newscard.module.css
+++ b/styles/ui/newscard.module.css
@@ -46,13 +46,13 @@
 }
 
 .title-wrapper .title{
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
     color: var(--color-neutral-900);
 }
 
 .title-wrapper .date{
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
     color: var(--color-neutral-900);
 }
