--- a/styles/ui/techcard.module.css
+++ b/styles/ui/techcard.module.css
@@ -60,7 +60,7 @@
     height: 100%;
 
     color: var(--primary-blue);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
 
     text-align: center;
