반응형 디자인 - 랜딩페이지

--- a/app/global.css
+++ b/app/global.css
@@ -47,6 +47,10 @@ html {
   scroll-behavior: smooth;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 @media (max-width: 1280px) {
   html {
     font-family: var(--font-famly);
