--- a/styles/sections/concept.module.css
+++ b/styles/sections/concept.module.css
@@ -1,17 +1,14 @@
-.concept {
+.wrapper {
     display: flex;
     justify-content: center;
     max-width: 1920px;
-    min-width: 972px;
-    width:100vw;
-    height:972px;
+    width: 100%;
 
     /* border: 2px solid purple;   확인용 */
 }
 
 .section {
     max-width: 1440px;
-    min-width: 1280px;
     width: 100%;
     /* border: 2px solid blue;   확인용 */
 
@@ -23,8 +20,7 @@
 }
 
 .container {
-    max-width: 1200px;
-    max-height: 963px;
+    max-width: 1100px;
     width: 100%;
     height: 100%;
     margin: 120px 0;
@@ -79,5 +75,15 @@
 }
 
 
+/* ============================================
+   Mobile (max-width: 768px)
+   ============================================ */
+@media (max-width: 1280px) {
+    .cards {
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
 
 
