--- a/styles/sections/technologystack.module.css
+++ b/styles/sections/technologystack.module.css
@@ -1,6 +1,4 @@
 .wrapper {
-    height: 970px;
-
     /* border: 2px solid purple;     확인용 */
 }
 
@@ -9,8 +7,7 @@
 }
 
 .container {
-    max-height: 740px;
-    height: 100%;
+
     margin: 120px 0;
 
     gap: 80px;
@@ -44,7 +41,11 @@
     gap: 40px;
 }
 
-
+@media (max-width: 1280px) {
+    .stacks {
+        width: 80%;
+    }
+}
 
 
 
